src/scss/_vars.scss
$colorVeryLightGrey: #f3f2ec;
$colorLightGrey: #eae9e0;
$colorMediumGrey: #aca996;
$colorDarkGrey: #929082;
$colorVeryDarkGrey: #6c6a5f;
$colorWhite: #fff;
$colorBlack: #2c2b27;
$colorYellow: #ecd91b;
$colorOrange: #ffb522;
$colorRed: #f55522;
$colorPink: #e51ca0;
$colorPurple: #ab50cc;
$colorBlue: #3e58eb;
$colorIce: #2aa7ee;
$colorTeal: #0fc8ba;
$colorLime: #5dd400;
$colorGreen: #57c600;

$colorBorderLight: #eae9e0;
$colorBorderDark: #dfddd0;

$colorSecondary: #cbc9bd;

$colorHover: rgba(80,73,28,0.08);


$transitionFast: all 0.2s ease-in-out;

@mixin text-overflow { overflow: hidden; text-overflow: ellipsis; }
@mixin text-overflow-nw { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }

@mixin text-very-small { font-size: 11px; line-height: 18px; letter-spacing: 0.2px; color: $colorMediumGrey; }
@mixin text-small { font-size: 12px; line-height: 18px; letter-spacing: 0px; }
@mixin text-common { font-size: 14px; line-height: 22px; letter-spacing: -0.12px; }
@mixin text-paragraph { font-size: 16px; line-height: 24px; letter-spacing: -0.2px; }
@mixin text-title { font-size: 36px; line-height: 44px; letter-spacing: -0.64px; font-weight: 600; }
@mixin text-header1 { font-family: 'Inter'; font-size: 28px; line-height: 32px; letter-spacing: -0.56px; font-weight: 600; }
@mixin text-header2 { font-family: 'Inter'; font-size: 22px; line-height: 28px; letter-spacing: -0.48px; font-weight: 600; }
@mixin text-header3 { font-size: 18px; line-height: 26px; letter-spacing: -0.28px; font-weight: 600; }
@mixin text-description { font-size: 18px; line-height: 26px; letter-spacing: -0.16px; }
@mixin text-quote { font-size: 18px; line-height: 26px; letter-spacing: -0.16px; }

@mixin pos-abs-mid { position: absolute; left: 50%; top: 50%; }

@mixin clamp { -webkit-box-orient: vertical; display: -webkit-box; overflow: hidden; }
@mixin clamp1 { @include clamp; -webkit-line-clamp: 1;  } 
@mixin clamp2 { @include clamp; -webkit-line-clamp: 2; } 
@mixin clamp3 { @include clamp; -webkit-line-clamp: 3; } 
@mixin clamp4 { @include clamp; -webkit-line-clamp: 4; } 

